--- a/src/abstracts/_variables.scss
+++ b/src/abstracts/_variables.scss
@@ -3,4 +3,10 @@ $bp-tablet-horizontal: 1024px;
 $bp-desktop: 1200px;
 $bp-desktop-xk: 1440px;
 
-$roboto-font: "Roboto", sans-serif;
+$black: #151515;
+$green: #4EE1A0;
+$dark-gray: #242424;
+$gray: #D9D9D9;
+$white: #FFFFFF;
+
+$primary-font: 'Space Grotesk', sans-serif;
