--- a/src/abstracts/_mixins.scss
+++ b/src/abstracts/_mixins.scss
@@ -22,3 +22,24 @@
     }
   }
 }
+
+@mixin button() {
+  color: v.$white;
+  letter-spacing: 0.2em;
+  position: relative;
+  font-family: v.$primary-font;
+  font-size: 1rem;
+  &::after {
+    content: '';
+    display: inline-block;
+    background-color: v.$green;
+    position: absolute;
+    width: 100%;
+    height: 3px;
+    left: 0;
+    top: 2rem;
+  }
+  &:hover {
+    color: v.$green; 
+  }
+}
