--- a/src/layout/_footer.scss
+++ b/src/layout/_footer.scss
@@ -1,1 +1,82 @@
 @use '../abstracts/variables' as v;
+@use '../abstracts/mixins' as m;
+
+footer {
+    background-color: v.$dark-gray;
+    padding-top: 4rem;
+    padding-bottom: 3rem;
+    background-image: url('../img/bg-ellipse.svg');
+    background-repeat: no-repeat;
+    background-position: left bottom 14rem;
+    background-size: 45%;
+    
+    .container {
+        .footer_header {
+            display: flex;
+            align-items: center;
+            flex-direction: column;
+            gap: 2rem;
+        }
+        p {
+            font-weight: 400;
+            text-align: center;
+            padding: 0 0.5rem;
+        }
+        form {
+            width: 100%;
+            display: flex;
+            flex-direction: column;
+            gap: 1.5rem;
+            padding-bottom: 5.5rem;
+            border-bottom: 1px solid v.$white;
+            label {
+                display: none;
+            }
+            input {
+                width: 100%;
+                padding: 1rem;
+                border: none;
+                border-bottom: 2px solid v.$white;
+                border-radius: 0;
+                background-color: transparent;
+                color: v.$gray;
+                font-family: v.$primary-font;
+                font-size: 1rem;
+                box-shadow: none;
+            }
+            textarea {
+                width: 100%;
+                height: 8rem;
+                padding: 1rem;
+                border: none;
+                border-bottom: 2px solid v.$white;
+                border-radius: 0;
+                background-color: transparent;
+                color: v.$gray;
+                font-family: v.$primary-font;
+                font-size: 1rem;
+                box-shadow: none;
+            }
+            a {
+                margin-left: auto;
+            }
+        }
+
+        .footer_footer {
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            gap: 1rem;
+            padding-top: 2.5rem;
+    
+            .contact_menu ul {
+                display: flex;
+                flex-direction: row;
+                gap: 1.5rem;
+            }
+        }
+        
+    }
+}
+
+
