--- a/src/layout/_header.scss
+++ b/src/layout/_header.scss
@@ -1,1 +1,56 @@
 @use '../abstracts/variables' as v;
+
+header {
+    padding-top: 1rem;
+    margin-bottom: 5.5rem;
+    background-color: v.$black;
+    background-image: url('../img/bg-ellipse.svg'), url('../img/bg-circle.svg');
+    background-repeat: no-repeat;
+    background-size: 45%, 15%;
+    background-position: left top 12rem, right top 17rem;
+
+    .navbar {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 1rem;
+    padding: 1.5rem;
+    margin-bottom: 2rem;
+    
+    .contact_menu ul {
+            display: flex;
+            flex-direction: row;
+            gap: 1.5rem;
+    }
+}
+
+.hero {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    text-align: center;
+    color: v.$white;
+    gap: 2rem;
+    
+    &_content {
+        h1{
+            margin-bottom: 2rem;
+            position: relative;;
+            span::after {
+                content: '';
+                display: inline-block;
+                background-color: v.$green;
+                position: absolute;
+                width: 66%;
+                height: 4px;
+                left: 25%;
+                bottom: -0.1em;
+            }
+        }
+
+        p{
+            margin-bottom: 2rem;
+        }
+    }
+}
+}
