--- a/src/base/_typography.scss
+++ b/src/base/_typography.scss
@@ -1,17 +1,32 @@
 @use '../abstracts/variables' as v;
+@use '../abstracts/mixins' as m;
 
 h1 {
     color: v.$white;
     font-family: v.$primary-font;
     line-height: 1;
     font-size: 2.5rem;
+    @include m.breakpoint(tablet) {
+        font-size: 4.3rem;
+        line-height: 5rem;
+    }
+    @include m.breakpoint(desktop) {
+        font-size: 4.7rem;
+        line-height: 5rem;
+    }
 }
 
 h2 {
     color: v.$white;
     font-family: v.$primary-font;
     line-height: 1.2;
-    font-size: 2.2rem;
+    font-size: 2.5rem;
+    @include m.breakpoint(tablet) {
+        font-size: 5.2rem;
+    }
+    @include m.breakpoint(desktop) {
+        font-size: 4.5rem;
+    }
 }
 
 h3 {
@@ -19,6 +34,12 @@ h3 {
     font-family: v.$primary-font;
     font-size: 2rem;
     font-weight: 600;
+    @include m.breakpoint(tablet) {
+        font-size: 3.2rem;
+    }
+    @include m.breakpoint(desktop) {
+        font-size: 2.8rem;
+    }
 }
 
 h4 {
@@ -34,4 +55,7 @@ p {
     line-height: 1.4;
     font-size: 1rem;
     font-weight: 300;
+    @include m.breakpoint(tablet) {
+        font-size: 1rem;
+    }
 }
