--- a/src/abstracts/_mixins.scss
+++ b/src/abstracts/_mixins.scss
@@ -2,22 +2,22 @@
 
 @mixin breakpoint($bp) {
   @if $bp == tablet {
-    @media (min-width: $bp-tablet) {
+    @media (min-width: v.$bp-tablet) {
       @content;
     }
   }
   @if $bp == tablethorizontal {
-    @media (min-width: $bp-tablet-horizontal) {
+    @media (min-width: v.$bp-tablet-horizontal) {
       @content;
     }
   }
   @if $bp == desktop {
-    @media (min-width: $bp-desktop) {
+    @media (min-width: v.$bp-desktop) {
       @content;
     }
   }
   @if $bp == desktopxl {
-    @media (min-width: $bp-desktop-xk) {
+    @media (min-width: v.$bp-desktop-xl) {
       @content;
     }
   }
