--- a/src/layout/_footer.scss
+++ b/src/layout/_footer.scss
@@ -9,6 +9,15 @@ footer {
     background-repeat: no-repeat;
     background-position: left bottom 14rem;
     background-size: 45%;
+    @include m.breakpoint(tablet) {
+        background-position: left bottom 9rem;
+        background-size: 20%;
+    }
+    @include m.breakpoint(desktop) {
+        background-image: url('../img/bg-ellipse-icon-left-desktop.svg');
+        background-position: left -15% bottom 40%;
+        background-size: 30%;
+    }
     
     .container {
         .footer_header {
@@ -16,65 +25,145 @@ footer {
             align-items: center;
             flex-direction: column;
             gap: 2rem;
-        }
-        p {
-            font-weight: 400;
-            text-align: center;
-            padding: 0 0.5rem;
-        }
-        form {
-            width: 100%;
-            display: flex;
-            flex-direction: column;
-            gap: 1.5rem;
-            padding-bottom: 5.5rem;
-            border-bottom: 1px solid v.$white;
-            label {
-                display: none;
+            @include m.breakpoint(tablet) {
+                padding: 0 8rem;
             }
-            input {
-                width: 100%;
-                padding: 1rem;
-                border: none;
-                border-bottom: 2px solid v.$white;
-                border-radius: 0;
-                background-color: transparent;
-                color: v.$gray;
-                font-family: v.$primary-font;
-                font-size: 1rem;
-                box-shadow: none;
+            @include m.breakpoint(desktop) {
+                padding: 0;
+                flex-direction: row;
+                align-items: start;
+                justify-content: space-between;
             }
-            textarea {
-                width: 100%;
-                height: 8rem;
-                padding: 1rem;
-                border: none;
-                border-bottom: 2px solid v.$white;
-                border-radius: 0;
-                background-color: transparent;
-                color: v.$gray;
-                font-family: v.$primary-font;
-                font-size: 1rem;
-                box-shadow: none;
-            }
-            a {
-                margin-left: auto;
-            }
-        }
+            &_main {
+                @include m.breakpoint(desktop) {
+                    width: 100%;
+                    display: flex;
+                    flex-direction: column;
+                    align-items: start;
+                    justify-content: start;
+                    gap: 2rem;
+                }
+                p {
+                font-weight: 400;
+                text-align: center;
+                padding: 0 0.5rem;
 
+                    @include m.breakpoint(desktop) {
+                        text-align: start;
+                        width: 75%;
+                    }
+                }                  
+            }
+            form {
+                    width: 100%;
+                    display: flex;
+                    flex-direction: column;
+                    gap: 1.5rem;
+                    padding-bottom: 5.5rem;
+                    @include m.breakpoint(desktop) {
+                        width: 80%;
+                    }
+                    label {
+                        display: none;
+                    }
+                    input {
+                        width: 100%;
+                        padding: 1rem;
+                        border: none;
+                        border-bottom: 2px solid v.$white;
+                        border-radius: 0;
+                        background-color: transparent;
+                        color: v.$gray;
+                        font-family: v.$primary-font;
+                        font-size: 1rem;
+                        box-shadow: none;
+                    }
+                    textarea {
+                        width: 100%;
+                        height: 8rem;
+                        padding: 1rem;
+                        border: none;
+                        border-bottom: 2px solid v.$white;
+                        border-radius: 0;
+                        background-color: transparent;
+                        color: v.$gray;
+                        font-family: v.$primary-font;
+                        font-size: 1rem;
+                        box-shadow: none;
+                    }
+                    a {
+                        margin-left: auto;
+                    }
+                    
+                    input, textarea {
+                        border-bottom: 2px solid v.$white; // color por defecto
+                        transition: border-color 0.3s;
+                    }
+
+                    input:valid, textarea:valid {
+                        border-bottom: 2px solid v.$green; // color cuando es válido
+                    }
+
+                    input:invalid:focus, textarea:invalid:focus {
+                        border-bottom: 2px solid red; // color cuando es inválido (opcional)
+                    }
+
+                    input:invalid:not(:focus), textarea:invalid:not(:focus) {
+                        border-bottom: 2px solid v.$white;
+                    }
+
+                    .error-message {
+                        color: red;
+                        font-size: 0.9rem;
+                        margin-top: 0.2rem;
+                    }
+                    .input-error {
+                        border-bottom: 2px solid red !important;
+                    }
+                }
+            }    
         .footer_footer {
             display: flex;
             flex-direction: column;
             align-items: center;
             gap: 1rem;
             padding-top: 2.5rem;
+            border-top: 1px solid v.$white;
+            @include m.breakpoint(tablet) {
+                justify-content: space-between;
+                flex-direction: row;
+            }
+
+
     
             .contact_menu ul {
                 display: flex;
                 flex-direction: row;
                 gap: 1.5rem;
+
+                @include m.breakpoint(tablet) {
+                    gap: 2.8rem;
+                }
+                li a svg {
+                @include m.breakpoint(tablet) {
+                    width: 120%;
+                    transition: color 0.3s, fill 0.3s;
+                    color: v.$white;
+                    &:hover {
+                        color: v.$green;
+                    }
+                }
             }
+            
+            .logo {
+                @include m.breakpoint(tablet) {
+                    width: 120%;
+                }
+            }
+             }
+        
         }
+           
         
     }
 }
