--- a/src/abstracts/_mixins.scss
+++ b/src/abstracts/_mixins.scss
@@ -25,17 +25,18 @@
 
 @mixin button() {
   color: v.$white;
-  letter-spacing: 0.2em;
+  letter-spacing: 0.14em;
   position: relative;
   font-family: v.$primary-font;
-  font-size: 1rem;
+  font-size: 0.9rem;
+  font-weight: 600;
   &::after {
     content: '';
     display: inline-block;
     background-color: v.$green;
     position: absolute;
     width: 100%;
-    height: 3px;
+    height: 2px;
     left: 0;
     top: 2rem;
   }
