--- a/src/layout/_footer.scss
+++ b/src/layout/_footer.scss
@@ -43,14 +43,30 @@ footer {
                     justify-content: start;
                     gap: 2rem;
                 }
+                h2 {
+                    text-align: center;
+                    margin-bottom: 5.33vw;
+                    @include m.breakpoint(tablet) {
+                        text-align: none;
+                        margin-bottom: 2.6vw;
+                    }
+                    @include m.breakpoint(desktop) {
+                        text-align: none;
+                        margin-bottom: 0;
+                    }
+                }
                 p {
-                font-weight: 400;
+                font-weight: 500;
                 text-align: center;
-                padding: 0 0.5rem;
-
+                    @include m.breakpoint(tablet) {
+                        width: 95%;
+                        font-weight: 600;
+                        line-height: 1.6;
+                    }
                     @include m.breakpoint(desktop) {
                         text-align: start;
-                        width: 75%;
+                        width: 77%;
+                        font-weight: 600;
                     }
                 }                  
             }
@@ -166,6 +182,7 @@ footer {
                     gap: 2.8rem;
                 }
                 li a svg {
+                    color: v.$white;
                 @include m.breakpoint(tablet) {
                     width: 120%;
                     transition: color 0.3s, fill 0.3s;
