--- a/src/layout/_header.scss
+++ b/src/layout/_header.scss
@@ -56,6 +56,7 @@ header {
                 gap: 2.5rem;
             }
             li a svg {
+                color: v.$white;
                 @include m.breakpoint(tablet) {
                     width: 120%;
                     transition: color 0.3s, fill 0.3s;
@@ -148,6 +149,7 @@ header {
             @include m.breakpoint(desktop) {
                 width: 55%;
                 margin-bottom: 3.8rem;
+                font-weight: 500;
             }
         }
     }
